[gd_scene load_steps=6 format=3 uid="uid://dqtc13uqjsv45"]

[ext_resource type="Script" path="res://nodes/turret.gd" id="1_6281m"]
[ext_resource type="PackedScene" uid="uid://c24o1xroe8oes" path="res://nodes/connector.tscn" id="1_ikl35"]
[ext_resource type="PackedScene" uid="uid://pa85rsijh4bm" path="res://nodes/collision.tscn" id="2_iccs0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xvxp4"]
radius = 64.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ogpxy"]
radius = 19.4165

[node name="turret" type="Node2D"]
script = ExtResource("1_6281m")

[node name="Label" type="Label" parent="."]
offset_left = -5.0
offset_top = -42.0
offset_right = 63.0
offset_bottom = -19.0
text = "1"

[node name="Connector" parent="." instance=ExtResource("1_ikl35")]

[node name="CollisionShape2D" parent="Connector" index="0"]
shape = SubResource("CircleShape2D_xvxp4")

[node name="Collision" parent="." instance=ExtResource("2_iccs0")]

[node name="CollisionShape2D" parent="Collision" index="0"]
shape = SubResource("CircleShape2D_ogpxy")

[node name="PowerTimer" type="Timer" parent="."]
autostart = true

[node name="base" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(0.46, 0.3864, 0.435467, 1)

[node name="Pivot" type="Node2D" parent="."]

[node name="barrel" type="ColorRect" parent="Pivot"]
offset_left = -6.0
offset_top = -5.0
offset_right = 35.0
offset_bottom = 5.0
color = Color(0.91, 0.4004, 0.408893, 1)

[connection signal="area_entered" from="Connector" to="." method="_on_connector_area_entered"]
[connection signal="timeout" from="PowerTimer" to="." method="_on_power_timer_timeout"]

[editable path="Connector"]
[editable path="Collision"]
